# ai-application

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  bandit-report.json  docker-compose.yml  generate_google_token.py  gitlab-ci.yml  graph_config.json  langgraph.json  pyproject.toml  pytest.ini  requirements.txt  run.py  run.sh  run_dev_servers.py  safety-report.json  sample.env  sonar-project.properties
.github/: README.md
.github/workflows/: docker-ci.yml  docker-reusable.yml  pipeline.yml  release.yml  security-reusable.yml  security.yml  test-lint-reusable.yml  test-lint.yml
docs/: chat_history_service.md  data_api_service.md  dataset_service.md  document_service.md  graph_execution_endpoints.md  graph_service.md  graph_streaming_api.md  logger_service.md  rate_limit_service.md  services_overview.md  system_service.md  validator_services.md  web_scraper_service.md
examples/: document_ingest_positions.txt  graph_config_azure_openai.json  graph_config_openai.json  positions_example.json  prompts.txt
notebooks/: fine_tunning.ipynb  graphs.ipynb  guardrails.ipynb  local_llms.ipynb  prompt_copy_script.ipynb  redis_filter.ipynb  retriver_test.ipynb
notebooks/intent_recognition/: BERT.ipynb  HuBERT.ipynb  HuSpaCy.ipynb  intents.xlsx  rasa.ipynb  spacy.ipynb  tensorflow_IR.ipynb  whisper_openai.ipynb
postman/: recruiter_ai_api.postman_collection.json
src/: app.py  config.py
src/config/: app_config.py  constants.py
src/index_schemas/: redis_positions_index_schema.json
src/routes/: agent_routes.py  dataset_routes.py  document_routes.py  file_upload_routes.py  graph_config_loader_routes.py  graph_routes.py  graph_studio_routes.py  personal_data_filter_routes.py  system_routes.py  topic_validation_routes.py  vector_db_routes.py  web_scraping_routes.py
src/schemas/: agent_request_post_schema.py  agent_schema.py  dataset_schema.py  document_schema.py  file_upload_schema.py  graph_schema.py  model_schema.py  personal_data_filter_schema.py  response_schema.py  schema.py  system_schema.py  token_validation_schema.py  tool_schema.py  topic_validation_schema.py  vector_db_post_schema.py  vector_db_schema.py  web_scraping_schema.py
src/services/agent/: agent_service.py  in_memory_history.py  tools_config.py
src/services/agent/tools/: retriver_tool.py  web_search_tool.py
src/services/chat_history/: redis_chat_history.py
src/services/data_api/: app_settings.py  chat_history.py
src/services/dataset/: dataset_service.py
src/services/document/: default_schema.py  document_service.py  file_upload_service.py
src/services/file_loader/: file_loader.py
src/services/graph/: graph.py  graph_checkpointer.py  graph_service.py  graph_studio.py  graph_studio_service.py  personal_data_filter_checkpointer.py  tool_handler.py
src/services/graph/tools/: document_link_analyzer_tool.py  get_labels_tool.py  get_position_tool.py  issue_tracker_tool.py  retriever_tool.py  search_tool_factory.py  tools.py  tools_config.py  web_search_tool.py
src/services/logger/: logger_service.py  logs_json_formatter.py
src/services/rate_limit/: queue.py  rate_limit.py  semaphore.py
src/services/system/: system_service.py
src/services/validators/: token_validation_service.py
src/services/validators/personal_data/: personal_data_filter_checkpointer.py  personal_data_filter_service.py
src/services/validators/topic_validator/: topic_validator_service.py
src/services/vector_db/: vector_db_service.py
src/services/web_scraper/: scraper_config.py  scrapy_subprocess_runner.py  scrapy_web_scraping_service.py  web_scraping_service.py
src/utils/: extract_message_content.py  get_prompt.py  get_search_scores.py  model_selector.py  quote_if_space.py  s3_use_cases.py  select_model.py  token_counter.py  type_converters.py
tests/: test_app.py
tests/routes/: test_agent_route.py  test_dataset_routes.py  test_document_routes.py  test_graph_config_loader_routes.py  test_graph_routes.py  test_personal_data_filter_routes.py  test_system_routes.py  test_topic_validation_routes.py  test_vector_db_route.py  test_web_scraping_routes.py
tests/schemas/: test_dataset_schema.py  test_document_schema.py  test_graph_schema.py  test_personal_data_filter_schema.py  test_system_schema.py  test_token_validation_schema.py  test_tool_schema.py  test_topic_validation_schema.py  test_web_scraping_schema.py
tests/service/: test_logger_service.py
tests/services/chat_history/: test_chat_history.py  test_redis_chat_history.py
tests/services/data_api/: test_app_settings.py  test_chat_history_data_api.py  test_data_api_service.py
tests/services/dataset/: test_dataset_service.py
tests/services/document/: test_document_service.py
tests/services/graph/: test_graph.py  test_graph_service.py
tests/services/graph/tools/: test_document_link_analyzer_tool.py  test_document_link_analyzer_tool_extra.py  test_get_labels_tool.py  test_get_position_tool.py  test_issue_tracker_tool.py  test_retriever_tool.py  test_search_tool_factory.py  test_tools_config.py  test_web_search_tool.py
tests/services/logger/: test_logger_service.py
tests/services/rate_limit/: test_rate_limit_service.py
tests/services/system/: test_system_service.py
tests/services/validators/personal_data/: test_personal_data_filter_checkpointer.py  test_personal_data_filter_service.py
tests/services/validators/topic_validator/: test_topic_validator_service.py
tests/services/web_scraper/: test_scrapy_web_scraping_service.py
tests/utils/: test_extract_message_content.py  test_get_prompt.py  test_get_search_scores.py  test_quote_if_space.py  test_select_model.py  test_token_counter.py  test_type_converters.py
