[tool.poetry]
name = "recruiter-ai-app"
version = "0.1.0"
description = "Multi-agent AI system app with document processing and web scraping capabilities"
authors = ["tamas.zsitva"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "*"}
python-dotenv = "*"
pydantic = "*"
python-multipart = "*"
langfuse = "*"
langsmith = "*"
langchain = "*"
langchain-core = "*"
langchain-community = "*"
langchain-openai = "*"
langchain-anthropic = "*"
langchain-aws = "*"
langchain-redis = "*"
langchain-google-community = "*"
langgraph = "*"
langchain-tavily = "*"
google-api-python-client = "*"
tavily-python = "*"
openai = "*"
tiktoken = "*"
requests = "*"
deeplake = "*"
docx2txt = "*"
unstructured = "*"
pandas = "*"
aiohttp = "*"
beautifulsoup4 = "*"
sentence-transformers = "*"
redis = "*"
psutil = "*"
boto3 = "*"
aiofiles = "*"
scrapy = "*"
twisted = "*"
python-docx = "*"
openpyxl = "*"
reportlab = "*"
scrapy-user-agents = "*"
langgraph-cli = {extras = ["inmem"], version = "^0.3.6"}


[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
black = "*"
isort = "*"
flake8 = "*"
mypy = "*"
pre-commit = "*"
httpx = "*"
safety = "*"
bandit = "*"
autoflake = "^2.3.1"

[tool.poetry.scripts]
start = "src.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
    "-v"
]
asyncio_mode = "auto"
